# CppStuff

./: .gitignore  CMakeLists.txt
apps/amp_app/: CMakeLists.txt  Readme.md  main.cpp
apps/app/: CMakeLists.txt  main.cpp
apps/cpu_app/: CMakeLists.txt  main.cpp
apps/custom_yolo_app/: CMakeLists.txt  main.cpp
apps/opengl_app/: CMakeLists.txt  expectation.h  main.cpp  main_mandelbrot.cpp  normal_render_main.cpp
libs/core/executor/: CMakeLists.txt  Readme.md
libs/core/executor/src/: main.cpp
libs/matmul/: CMakeLists.txt
libs/matmul/benchmark/: BM_MatMul.cpp
libs/matmul/include/noxitu/matmul/: matmul.h
libs/matmul/src/noxitu/matmul/: amp.cpp  cpu.cpp  opencv.cpp  utils.cpp
libs/matmul/unit_tests/: Test_MatMul.cpp
libs/noxitu/stub/: CMakeLists.txt
libs/yolo/common/: CMakeLists.txt
libs/yolo/common/include/noxitu/yolo/common/: ConfigurationEntry.h  Names.h  NetworkBuilder.h  NetworkConfiguration.h  Utils.h  Weights.h
libs/yolo/common/src/noxitu/yolo/common/: ConfigurationEntry.cpp  Names.cpp  NetworkBuilder.cpp  NetworkConfiguration.cpp  Weights.cpp
libs/yolo/cpu/: CMakeLists.txt
libs/yolo/cpu/include/noxitu/yolo/cpu/: Network.h  NetworkBuilder.h  fast_convolution.h
libs/yolo/cpu/src/noxitu/yolo/cpu/: Network.cpp  NetworkBuilder.cpp  fast_convolution.cpp
libs/yolo/cpu_op/: CMakeLists.txt
libs/yolo/cpu_op/benchmark/: BM_Convolution.cpp
libs/yolo/cpu_op/include/noxitu/yolo/: amp_convolution.h  fast_convolution.h
libs/yolo/cpu_op/src/noxitu/yolo/: amp_convolution.cpp  fast_convolution.cpp
libs/yolo/cpu_op/unit_tests/: Test_Convolution.cpp
